Add error handling to token service